<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pixel.singletune.app.ui.SignupActivity">

    <com.cengalabs.flatui.views.FlatEditText
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="96dp"
        android:focusable="true"
        android:hint="@string/username_hint"
        android:singleLine="true"
        flatui:textColor="light"
        flatui:theme="Sand" />

    <com.cengalabs.flatui.views.FlatEditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        flatui:textColor="light"
        flatui:theme="Sand" />

    <com.cengalabs.flatui.views.FlatEditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        flatui:textColor="light"
        flatui:theme="Sand" />

    <com.cengalabs.flatui.views.FlatEditText
        android:id="@+id/password_confirmation_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        flatui:textColor="light"
        flatui:theme="Sand" />

    <com.cengalabs.flatui.views.FlatButton
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button_label"
        flatui:theme="Grass" />
</LinearLayout>