<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:flatui="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_action_picture"
        android:minWidth="80dp"
        android:minHeight="80dp"
        android:maxHeight="80dp"
        android:maxWidth="80dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:contentDescription="@string/userAvaterPlaceholder" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/username_label"
        android:id="@+id/username_textView"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/user_imageView"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"/>

    <com.cengalabs.flatui.views.FlatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/follow_button_text"
        android:id="@+id/item_follow_button"
        android:layout_marginRight="38dp"
        android:layout_alignBottom="@+id/user_imageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="15dp"
        flatui:theme="Sky"/>

</RelativeLayout>